--- a/menetrend.html
+++ b/menetrend.html
@@ -13,7 +13,7 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary" style="font-weight:500;">
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html">
-          <img src="Pictures/Fehérvár_FC_logo.png" alt="Logo" width="45" height="60" class="d-inline-block align-text-middle">
+          <img src="Pictures/Fehérvár_FC_logo.png" style="margin-left: 0.5em;" alt="Logo" width="45" height="60" class="d-inline-block align-text-middle">
           Fehérvár FC
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -49,5 +49,396 @@
       </div>
     </nav>
 
+    <h1 id="szezon">A 2024-2025 szezon menetrendje</h1>
+    <div class="d-flex justify-content-center">
+    <table class="table table-bordered text-center" style="width: 80%; ">
+      <thead >
+        <tr>
+          <th>Dátum</th>
+          <th>Forduló</th>
+          <th>Hazai</th>
+          <th>Vendég</th>
+          <th>Végeredmény</th>
+          <th>Gólszerzők</th>
+          <th>Esemény</th>
+        </tr>
+      </thead>
+
+      <tr class="table-success">
+        <td>2024.07.25</td>
+        <td>1. selejtező kör</td>
+        <td>Sumqayit FK</td>
+        <td>Fehérvár FC</td>
+        <td>1-2</td>
+        <td>Spandler Csaba, Tobias Christensen</td>
+        <td>UEFA Konferencia Liga Selejető</td>        
+      </tr>
+
+      <tr class="table-warning">
+        <td>2024.07.28</td>
+        <td>1.</td>
+        <td>Kecskeméti TE</td>
+        <td>Fehérvár FC</td>
+        <td>0-0</td>
+        <td>-</td>
+        <td>OTP Bank Liga</td>
+      </tr>
+      <tr class="table-warning">
+        <td>2024.07.31</td>
+        <td>1. selejtező kör</td>
+        <td>Fehérvár FC</td>
+        <td>Sumqayit FK</td>
+        <td>0-0</td>
+        <td>-</td>
+        <td>UEFA Konferencia Liga Selejtező</td>
+        
+      </tr>
+
+      <tr class="table-success">
+        <td>2024.08.03</td>
+        <td>2.</td>
+        <td>Fehérvár FC</td>
+        <td>Diósgyőri VTK</td>
+        <td>3-1</td>
+        <td>Katona Mátyás, Babos Bence, Nikola Serafimov</td>
+        <td>OTP Bank Liga</td>
+      </tr>
+      <tr class="table-danger">
+        <td>2024.08.08</td>
+        <td>2. selejtező kör</td>
+        <td>Omonia</td>
+        <td>Fehérvár FC</td>
+        <td>1-0</td>
+        <td>-</td>
+        <td>UEFA Konferencia Liga Selejtező</td>
+      </tr>
+      
+      <tr class="table-danger">
+        <td>2024.08.11</td>
+        <td>3.</td>
+        <td>Újpest FC</td>
+        <td>Fehérvár FC</td>
+        <td>4-1</td>
+        <td>Kovács Patrik</td>
+        <td>OTP Bank Liga</td>
+      </tr>
+      <tr class="table-danger">
+        <td>2024.08.14</td>
+        <td>2. selejtező kör</td>
+        <td>Fehérvár FC</td>
+        <td>Omonia</td>
+        <td>0-2</td>
+        <td>-</td>
+        <td>UEFA Konferencia Liga Selejtező</td>
+      </tr>
+
+      <tr class="table-warning">
+        <td>2024.08.18</td>
+        <td>4.</td>
+        <td>Fehérvár FC</td>
+        <td>Zalaegerszegi TE</td>
+        <td>1-1</td>
+        <td>Kovács Patrik</td>
+        <td>OTP Bank Liga</td>
+      </tr>
+      <tr class="table-warning">
+        <td>2024.08.25</td>
+        <td>5.</td>
+        <td>Nyíregyháza Spartacus</td>
+        <td>Fehérvár FC</td>
+        <td>3-3</td>
+        <td>Nejc Gradisar, Alaxai A. (ÖG), Kovács M. (ÖG)</td>
+        <td>OTP Bank Liga</td>
+      </tr>
+      <tr class="table-success">
+        <td>2024.08.30</td>
+        <td>Legjobb 64</td>
+        <td>Monor SE</td>
+        <td>Fehérvár FC</td>
+        <td>0-2</td>
+        <td>Kovács Patrik, Kovács Bence</td>
+        <td>MOL Magyar Kupa</td>
+      </tr>
+      <tr class="table-success">
+        <td>2024.08.30</td>
+        <td>6.</td>
+        <td>Fehérvár FC</td>
+        <td>MTK Budapest</td>
+        <td>1-0</td>
+        <td>Nejc Gradisar</td>
+        <td>OTP Bank Liga</td>
+      </tr>
+      <tr class="table-danger">
+        <td>2024.09.22</td>
+        <td>7.</td>
+        <td>Puskás Akadémia</td>
+        <td>Fehérvár FC</td>
+        <td>3-0</td>
+        <td>-</td>
+        <td>OTP Bank Liga</td>
+      </tr>
+      <tr class="table-danger">
+        <td>2024.09.29</td>
+        <td>8.</td>
+        <td>Fehérvár FC</td>
+        <td>Paksi FC</td>
+        <td>1-2</td>
+        <td>Holender Filip</td>
+        <td>OTP Bank Liga</td>
+      </tr>
+      <tr class="table-danger">
+        <td>2024.10.05</td>
+        <td>9.</td>
+        <td>ETO FC Győr</td>
+        <td>Fehérvár FC</td>
+        <td>3-1</td>
+        <td>Szabó Bálint</td>
+        <td>OTP Bank Liga</td>
+      </tr>
+      <tr class="table-danger">
+        <td>2024.10.20</td>
+        <td>10.</td>
+        <td>Ferencvárosi TC</td>
+        <td>Fehérvár FC</td>
+        <td>2-0</td>
+        <td>-</td>
+        <td>OTP Bank Liga</td>
+      </tr>
+      <tr class="table-success">
+        <td>2024.10.26</td>
+        <td>11.</td>
+        <td>Fehérvár FC</td>
+        <td>Debreceni VSC</td>
+        <td>2-0</td>
+        <td>Nejc Gradisar (2x)</td>
+        <td>OTP Bank Liga</td>
+      </tr>
+      <tr class="table-success">
+        <td>2024.10.30</td>
+        <td>Legjobb 32</td>
+        <td>Fehérvár FC</td>
+        <td>Diósgyőri VTK</td>
+        <td>2-1</td>
+        <td>Simut Mario, Nejc Gradisar</td>
+        <td>MOL Magyar Kupa</td>
+      </tr>
+      <tr class="table-success">
+        <td>2024.11.03</td>
+        <td>12.</td>
+        <td>Fehérvár FC</td>
+        <td>Kecskeméti TE</td>
+        <td>6-1</td>
+        <td>Szabó Bálint, Nejc Gradisar, <br>Nicolás Stefanelli (2x),<br> Kalmár Zsolt, Csongvai Áron</td>
+        <td>OTP Bank Liga</td>
+      </tr>
+      <tr class="table-danger">
+        <td>2024.11.10</td>
+        <td>13.</td>
+        <td>Diósgyőri VTK</td>
+        <td>Fehérvár FC</td>
+        <td>1-0</td>
+        <td>-</td>
+        <td>OTP Bank Liga</td>
+      </tr>
+      <tr class="table-danger">
+        <td>2024.11.23</td>
+        <td>14.</td>
+        <td>Fehérvár FC</td>
+        <td>Újpest FC</td>
+        <td>0-1</td>
+        <td>-</td>
+        <td>OTP Bank Liga</td>
+      </tr>
+      <tr class="table-success">
+        <td>2024.12.01</td>
+        <td>15.</td>
+        <td>Zalaegerszegi</td>
+        <td>Fehérvár FC</td>
+        <td>0-1</td>
+        <td>Bogdan Melnyk</td>
+        <td>OTP Bank Liga</td>
+      </tr>
+      <tr class="table-success">
+        <td>2024.12.08</td>
+        <td>16.</td>
+        <td>Fehérvár FC</td>
+        <td>Nyíregyháza Spartacus</td>
+        <td>2-0</td>
+        <td>Nejc Gradisar, Katona Mátyás</td>
+        <td>OTP Bank Liga</td>
+      </tr>
+      <tr class="table-danger">
+        <td>2024.12.14</td>
+        <td>17.</td>
+        <td>MTK Budapest</td>
+        <td>Fehérvár FC</td>
+        <td>3-2</td>
+        <td>Nejc Gradisar, Szabó Bálint</td>
+        <td>OTP Bank Liga</td>
+      </tr>
+      <tr class="table-success">
+        <td>2025.02.01</td>
+        <td>18.</td>
+        <td>Fehérvár FC</td>
+        <td>Puskás Akadémia</td>
+        <td>1-0</td>
+        <td>Katona Mátyás</td>
+        <td>OTP Bank Liga</td>
+      </tr>
+      <tr class="table-danger">
+        <td>2025.02.08</td>
+        <td>19.</td>
+        <td>Paksi FC</td>
+        <td>Fehérvár FC</td>
+        <td>2-0</td>
+        <td>-</td>
+        <td>OTP Bank Liga</td>
+      </tr>
+      <tr class="table-danger">
+        <td>2025.02.14</td>
+        <td>20.</td>
+        <td>Fehérvár FC</td>
+        <td>ETO FC Győr</td>
+        <td>0-1</td>
+        <td>-</td>
+        <td>OTP Bank Liga</td>
+      </tr>
+      <tr class="table-success">
+        <td>2025.02.19</td>
+        <td>Legjobb 16</td>
+        <td>Gyirmót FC</td>
+        <td>Fehérvár FC</td>
+        <td>0-2</td>
+        <td>Ivan Saponjic (2)</td>
+        <td>MOL Magyar Kupa</td>
+      </tr>
+      <tr class="table-danger">
+        <td>2025.02.23</td>
+        <td>21.</td>
+        <td>Fehérvár FC</td>
+        <td>Ferencvárosi TC</td>
+        <td>1-3</td>
+        <td>Szabó Bálint</td>
+        <td>OTP Bank Liga</td>
+      </tr>
+      <tr class="table-success">
+        <td>2025.03.02</td>
+        <td>22.</td>
+        <td>Debreceni VSC</td>
+        <td>Fehérvár FC</td>
+        <td>1-2</td>
+        <td>Ivan Saponjic, Katona Mátyás</td>
+        <td>OTP Bank Liga</td>
+      </tr>
+      <tr class="table-warning">
+        <td>2025.03.07</td>
+        <td>23.</td>
+        <td>Kecskeméti TE</td>
+        <td>Fehérvár FC</td>
+        <td>2-2</td>
+        <td>Ivan Saponjic (2)</td>
+        <td>OTP Bank Liga</td>
+      </tr>
+      <tr class="table-warning">
+        <td>2025.03.02</td>
+        <td>24.</td>
+        <td>Fehérvár FC</td>
+        <td>Diósgyőri VTK</td>
+        <td>0-0</td>
+        <td>-</td>
+        <td>OTP Bank Liga</td>
+      </tr>
+      <tr class="table-warning">
+        <td>2025.03.30</td>
+        <td>25.</td>
+        <td>Újpest FC</td>
+        <td>Fehérvár FC</td>
+        <td>2-2</td>
+        <td>Ivan Saponjic, Szabó Bálint</td>
+        <td>OTP Bank Liga</td>
+      </tr>
+      <tr class="table-danger">
+        <td>2025.04.03</td>
+        <td>Legjobb 8</td>
+        <td>MTK Budapest</td>
+        <td>Fehérvár FC</td>
+        <td>4-2</td>
+        <td>Kristian Sekulerac, Ivan Saponjic</td>
+        <td>MOL Magyar Kupa</td>
+      </tr>
+      <tr class="table-danger">
+        <td>2025.04.06</td>
+        <td>26.</td>
+        <td>Fehérvár FC</td>
+        <td>Zalaegerszegi</td>
+        <td>0-2</td>
+        <td>-</td>
+        <td>OTP Bank Liga</td>
+      </tr>
+      <tr class="table-info">
+        <td>2025.04.03</td>
+        <td>27.</td>
+        <td>Nyíregyháza Spartacus</td>
+        <td>Fehérvár FC</td>
+        <td></td>
+        <td></td>
+        <td>OTP Bank Liga</td>
+      </tr>
+      <tr class="table-light">
+        <td>2025.04.20</td>
+        <td>28.</td>
+        <td>Fehérvár FC</td>
+        <td>MTK Budapest</td>
+        <td></td>
+        <td></td>
+        <td>OTP Bank Liga</td>
+      </tr>
+      <tr class="table-light">
+        <td>2025.04.26</td>
+        <td>29.</td>
+        <td>Puskás Akadémia</td>
+        <td>Fehérvár FC</td>
+        <td></td>
+        <td></td>
+        <td>OTP Bank Liga</td>
+      </tr>
+      <tr class="table-light">
+        <td>2025.05.04</td>
+        <td>30.</td>
+        <td>Fehérvár FC</td>
+        <td>Paksi FC</td>
+        <td></td>
+        <td></td>
+        <td>OTP Bank Liga</td>
+      </tr>
+      <tr class="table-light">
+        <td>2025.05.10</td>
+        <td>31.</td>
+        <td>ETO FC Győr</td>
+        <td>Fehérvár FC</td>
+        <td></td>
+        <td></td>
+        <td>OTP Bank Liga</td>
+      </tr>
+      <tr class="table-light">
+        <td>2025.05.17</td>
+        <td>32.</td>
+        <td>Ferencvárosi TC</td>
+        <td>Fehérvár FC</td>
+        <td></td>
+        <td></td>
+        <td>OTP Bank Liga</td>
+      </tr>
+      <tr class="table-light">
+        <td>2025.05.25</td>
+        <td>33.</td>
+        <td>Fehérvár FC</td>
+        <td>Debreceni VSC</td>
+        <td></td>
+        <td></td>
+        <td>OTP Bank Liga</td>
+      </tr>
+    </table>
+    </div>
 </body>
 </html>
