--- a/történelem.html
+++ b/történelem.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <title>Fehérvár FC</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
 </head>
 <body>
@@ -12,7 +13,7 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary" style="font-weight:500;">
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html">
-        <img src="Pictures/Fehérvár_FC_logo.png" alt="Logo" width="45" height="60" class="d-inline-block align-text-middle">
+        <img src="Pictures/Fehérvár_FC_logo.png" style="margin-left: 0.5em;" alt="Logo" width="45" height="60" class="d-inline-block align-text-middle">
         Fehérvár FC
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
