--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html">
           <img src="Pictures/Fehérvár_FC_logo.png" alt="Logo" width="45" height="60" style="margin-left: 0.5em;" class="d-inline-block align-text-middle">
-          Fehérvár FC
+          Veled az úton
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -41,14 +41,14 @@
             </li>
             <li class="mx-2 text-muted">|</li>
             <li class="nav-item">
-              <a class="nav-link" href="press.html">Sajtó/Press</a>
+              <a class="nav-link" href="press.html">Meccsjegyfoglalás</a>
             </li>
             
           </ul>
         </div>
       </div>
     </nav>
-    <h1 id="mpage">A Szezon Legjobb Képei</h1>
+    <h1 id="mpage" style="margin-top: 3px;">A Szezon Legjobb Képei</h1>
 
     <div id="carouselExampleIndicators" class="carousel slide">
       <div class="carousel-indicators">
@@ -65,7 +65,7 @@
           <img src="Pictures/Legjobb/Továbbjutás.jpg" class="d-block w-100" alt="Diósgyőr Elleni Győzelem">
         </div>
         <div class="carousel-item">
-          <img src="Pictures/Legjobb/SzakmaiStáb.jpg" class="d-block w-100" alt="A Szakmaistáb a szurkolókkal ünnepel">
+          <img src="Pictures/Legjobb/SzakmaiStáb.jpg" class="d-block w-100" alt="A Szakmai stáb a szurkolókkal ünnepel">
         </div>
         <div class="carousel-item">
           <img src="Pictures/Legjobb/RBD.jpg" class="d-block w-100" alt="A Szurkolótábor">
@@ -88,7 +88,8 @@
             <img src="Pictures/MainPage/SzabóBálintHónapGólja.jpg" class="card-img-top" alt="A Hónap Játékosa">
             <div class="card-body">
               <h5 class="card-title">Március Hónap Játékosa: Szabó Bálint</h5>
-              <p class="card-text">A mérkőzéseken amin pályára lépett, mindig meghálálta Pető Tamás és a stábja bizalmát. Az gólt szerzett a Ferencváros ellen valamint gólpasszt osztott ki a Debreceni siker során is. Az Újpest elleni bajnoki találkozón szerzett hatalmas találtának köszönhetően a Hónap Találata címet is megszerezte a fiatal Középpályás!</p>
+              <p class="card-text">A mérkőzéseken amin pályára lépett, mindig meghálálta Pető Tamás és a stábja bizalmát. Az gólt szerzett a Ferencváros ellen valamint gólpasszt osztott ki a Debreceni siker során is. 
+                Az Újpest elleni bajnoki találkozón szerzett hatalmas találtának köszönhetően a Hónap Találata címet is megszerezte a fiatal középpályás!</p>
             </div>
           </div>
         </div>
@@ -116,7 +117,7 @@
               <div class="carousel-item">
                 <img src="Pictures/MainPage/FehMTK.jpg" class="d-block w-100" id="Meccsek" alt="Fehérvár MTK">
                 <div class="carousel-caption d-none d-md-block">
-                  <h5>A soron következő bajnoki találkozó</h5>
+                  <h5>A Soron Következő Bajnoki Találkozó</h5>
                   <p>Fehérvár FC - MTK Budapest</p>
                   <p><small>Időpont: 2025.04.20 13:15</small></p>
                 </div>
@@ -158,7 +159,7 @@
             <img src="Pictures/News/rbdultras.jpg" class="card-img-top" alt="Hír 2">
             <div class="card-body">
               <h5 class="card-title">Szurkolói tájékoztatás</h5>
-              <p class="card-text">A következő bajnoki mérkőzés kapunyitása 17:00-kor kezdődik. Kérjük időben foglalják el helyeiket. A stadion területén büfé is működik.</p>
+              <p class="card-text">A következő bajnoki mérkőzés kapunyitása 12:00-kor kezdődik. Kérjük időben foglalják el helyeiket. A stadion területén büfé is működik.</p>
             </div>
             <div class="card-footer">
               <small>2025. április 4.</small>
@@ -172,7 +173,7 @@
             <img src="Pictures/News/KarakóFerenc.jpg" class="card-img-top" alt="Hír 3">
             <div class="card-body">
               <h5 class="card-title">Karakó Ferenc vezeti a mérkőzésünket</h5>
-              <p class="card-text">Az <a href="https://www.mlsz.hu/" target="_blank">MLSZ</a> versenybizottságának tájékoztatása alapján Karakó Ferenc fogja vezetni a Zalaegerszeg elleni bajnoki mérkőzésünket. </p>
+              <p class="card-text">Az <a href="https://www.mlsz.hu/" target="_blank">MLSZ</a> Versenybizottságának tájékoztatása alapján Karakó Ferenc fogja vezetni a Zalaegerszeg elleni bajnoki mérkőzésünket. </p>
             </div>
             <div class="card-footer">
               <small>2025. április 4.</small>
