--- a/menetrend.html
+++ b/menetrend.html
@@ -14,7 +14,7 @@
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html">
           <img src="Pictures/Fehérvár_FC_logo.png" style="margin-left: 0.5em;" alt="Logo" width="45" height="60" class="d-inline-block align-text-middle">
-          Fehérvár FC
+          Veled az úton
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -41,7 +41,7 @@
             </li>
             <li class="mx-2 text-muted">|</li>
             <li class="nav-item">
-              <a class="nav-link" href="press.html">Sajtó/Press</a>
+              <a class="nav-link" href="press.html">Meccsjegyfoglalás</a>
             </li>
             
           </ul>
