--- a/történelem.html
+++ b/történelem.html
@@ -14,7 +14,7 @@
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html">
         <img src="Pictures/Fehérvár_FC_logo.png" style="margin-left: 0.5em;" alt="Logo" width="45" height="60" class="d-inline-block align-text-middle">
-        Fehérvár FC
+        Veled az úton
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -41,270 +41,114 @@
           </li>
           <li class="mx-2 text-muted">|</li>
           <li class="nav-item">
-            <a class="nav-link"  href="press.html">Sajtó/Press</a>
+            <a class="nav-link"  href="press.html">Meccsjegyfoglalás</a>
           </li>
           
         </ul>
       </div>
     </div>
   </nav>
+  
+<div class="container">
+  <div class="card h-100">
+    <div class="card-body">
+    <h1 class="card-title" style="   font-weight: bold;">
+      Alapítás
+    </h1>
+    <p class="card-text" style="color: black;">
+      A klub története 1941-ben kezdődött, amikor a székesfehérvári Székesfehérvári Vadásztölténygyár dolgozói megalapították a gyári sportegyesületet, amely akkor még a gyári munkások szabadidős sporttevékenységét szolgálta. A klub első neve Székesfehérvári Vadásztölténygyári SK volt, és kezdetben alacsonyabb osztályokban szerepelt.
+      A klub neve az idők során többször is változott, jellemzően a gyár nevéhez igazodva. A „Videoton” elnevezés 1968-ban jelent meg, miután a gyár is ezt a nevet vette fel – innen ered a klub legismertebb neve: Videoton FC.
+      A Videoton a hatvanas évek végére fokozatosan erősödött, és 1968-ban jutott fel először az NB I-be, a magyar labdarúgás élvonalába. Ekkor kezdődött az a folyamat, amely a klubot a hazai futball egyik meghatározó szereplőjévé tette.
+      Az alapítás tehát szorosan kötődik a helyi iparhoz és közösséghez, és a klub hosszú időn keresztül a gyári munkások büszkesége volt. A helyi identitás és a közösségi összetartozás ma is fontos része a klub szellemiségének.
+    </p>
+    </div>
+  </div>
+</div>
 
-      <h1 id="tablah1">A Férfi Labdarúgó A válogatott legutóbbi 25 lejátszott mérkőzése</h1>
+<div class="container mt-3">
+  <ul class="nav nav-pills nav-fill">
+    <li class="nav-item">
+      <a class="nav-link active" aria-current="page" href="#">OTP Bank Liga</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link text-black" href="történelemKupa.html">Magyar Kupa</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link text-black" href="történelemEurópa.html">Európai Kupa porond</a>
+    </li>
+  </ul>
+</div>
 
-      <table class="table table-striped table-bordered" style="width: 65%; margin: auto; " >
-        <thead class="table-dark">
-          <tr>
-            <th scope="col">#</th>
-            <th scope="col">Dátum</th>
-            <th scope="col">Ellenfél</th>
-            <th scope="col">Eredmény</th>
-            <th scope="col">Hazai/Vendég</th>
-            <th scope="col">Helyszín</th>
-            <th scope="col">Esemény</th>
-          </tr>
-        </thead>
-        <tbody>
-            <tr class="table-danger">
-                <th scope="row">1</th>
-                <td>2025.03.23.</td>
-                <td>Törökország</td>
-                <td>0-3</td>
-                <td>Hazai</td>
-                <td>Puskás Aréna</td>
-                <td>UEFA Nemzetek Ligája Play-Off</td>
-            </tr>
-            <tr class="table-danger">
-                <th scope="row">2</th>
-                <td>2025.03.20.</td>
-                <td>Törökország</td>
-                <td>1-3</td>
-                <td>Vendég</td>
-                <td>Rams Park Stadyumu</td>
-                <td>UEFA Nemzetek Ligája Play-Off</td>
-              </tr>
-          <tr class="table-warning">
-            <th scope="row">3</th>
-            <td>2024.11.19.</td>
-            <td>Németország</td>
-            <td>1-1</td>
-            <td>Hazai</td>
-            <td>Puskás Aréna</td>
-            <td>UEFA Nemzetek Ligája</td>
-          </tr>
-          <tr class="table-danger">
-            <th scope="row">4</th>
-            <td>2024.11.16.</td>
-            <td>Hollandia</td>
-            <td>4-0</td>
-            <td>Vendég</td>
-            <td>Johan Cruijff ArenA</td>
-            <td>UEFA Nemzetek Ligája</td>
-          </tr>
-          <tr class="table-success">
-            <th scope="row">5</th>
-            <td>2024.10.14.</td>
-            <td>Bosznia-Hercegovina</td>
-            <td>0-2</td>
-            <td>Vendég</td>
-            <td>Bilino Polje Stadion</td>
-            <td>UEFA Nemzetek Ligája</td>
-          </tr>
-          <tr class="table-warning">
-            <th scope="row">6</th>
-            <td>2024.10.11.</td>
-            <td>Hollandia</td>
-            <td>1-1</td>
-            <td>Hazai</td>
-            <td>Puskás Aréna</td>
-            <td>UEFA Nemzetek Ligája</td>
-          </tr>
-          <tr class="table-warning">
-            <th scope="row">7</th>
-            <td>2024.09.10.</td>
-            <td>Bosznia-Hercegovina</td>
-            <td>0-0</td>
-            <td>Hazai</td>
-            <td>Puskás Aréna</td>
-            <td>UEFA Nemzetek Ligája</td>
-          </tr>
-          <tr class="table-danger">
-            <th scope="row">8</th>
-            <td>2024.09.07.</td>
-            <td>Németország</td>
-            <td>5-0</td>
-            <td>Vendég</td>
-            <td>Merkur Spiel-Arena</td>
-            <td>UEFA Nemzetek Ligája</td>
-          </tr>
-          <tr class="table-success">
-            <th scope="row">9</th>
-            <td>2024.06.23.</td>
-            <td>Skócia</td>
-            <td>0-1</td>
-            <td>Vendég</td>
-            <td>MHP Arena</td>
-            <td>UEFA Európa-bajnokság</td>
-          </tr>
-          <tr class="table-danger">
-            <th scope="row">10</th>
-            <td>2024.06.19.</td>
-            <td>Németország</td>
-            <td>2-0</td>
-            <td>Vendég</td>
-            <td>MHP Arena</td>
-            <td>UEFA Európa-bajnokság</td>
-          </tr>
-          <tr class="table-danger">
-            <th scope="row">11</th>
-            <td>2024.06.15.</td>
-            <td>Svájc</td>
-            <td>1-3</td>
-            <td>Hazai</td>
-            <td>RheinEnergieStadion</td>
-            <td>UEFA Európa-bajnokság</td>
-          </tr>
-          <tr class="table-success">
-            <th scope="row">12</th>
-            <td>2024.06.08.</td>
-            <td>Izrael</td>
-            <td>3-0</td>
-            <td>Hazai</td>
-            <td>Nagyerdei Stadion</td>
-            <td>Nemzetközi barátságos mérkőzés</td>
-          </tr>
-          <tr class="table-danger">
-            <th scope="row">13</th>
-            <td>2024.06.04.</td>
-            <td>Írország</td>
-            <td>2-1</td>
-            <td>Vendég</td>
-            <td>Aviva Stadion</td>
-            <td>Nemzetközi barátságos mérkőzés</td>
-          </tr>
-          <tr class="table-success">
-            <th scope="row">14</th>
-            <td>2024.03.26.</td>
-            <td>Koszovó</td>
-            <td>2-0</td>
-            <td>Hazai</td>
-            <td>Puskás Aréna</td>
-            <td>Nemzetközi barátságos mérkőzés</td>
-          </tr>
-          <tr class="table-success">
-            <th scope="row">15</th>
-            <td>2024.03.22.</td>
-            <td>Törökország</td>
-            <td>1-0</td>
-            <td>Hazai</td>
-            <td>Puskás Aréna</td>
-            <td>Nemzetközi barátságos mérkőzés</td>
-          </tr>
-          <tr class="table-success">
-            <th scope="row">16</th>
-            <td>2023.11.19.</td>
-            <td>Montenegró</td>
-            <td>3-1</td>
-            <td>Hazai</td>
-            <td>Puskás Aréna</td>
-            <td>UEFA Európa-bajnoki selejtező</td>
-          </tr>
-          <tr class="table-warning">
-            <th scope="row">17</th>
-            <td>2023.11.16.</td>
-            <td>Bulgária</td>
-            <td>2-2</td>
-            <td>Vendég</td>
-            <td>Vasil Levski Nemzeti Stadion</td>
-            <td>UEFA Európa-bajnoki selejtező</td>
-          </tr>
-          <tr class="table-warning">
-            <th scope="row">18</th>
-            <td>2023.10.18.</td>
-            <td>Litvánia</td>
-            <td>2-2</td>
-            <td>Vendég</td>
-            <td>Steponas Darius and Stasys Girenas</td>
-            <td>UEFA Európa-bajnoki selejtező</td>
-          </tr>
-          <tr class="table-success">
-            <th scope="row">19</th>
-            <td>2023.10.14.</td>
-            <td>Szerbia</td>
-            <td>2-1</td>
-            <td>Hazai</td>
-            <td>Puskás Aréna</td>
-            <td>UEFA Európa-bajnoki selejtező</td>
-          </tr>
-          <tr class="table-success">
-            <th scope="row">20</th>
-            <td>2023.09.10.</td>
-            <td>Csehország</td>
-            <td>2-1</td>
-            <td>Hazai</td>
-            <td>Puskás Aréna</td>
-            <td>Nemzetközi barátságos mérkőzés</td>
-          </tr>
-          <tr class="table-success">
-            <th scope="row">21</th>
-            <td>2023.09.07.</td>
-            <td>Szerbia</td>
-            <td>1-2</td>
-            <td>Vendég</td>
-            <td>Stadium Rajko Mitić</td>
-            <td>UEFA Európa-bajnoki selejtező</td>
-          </tr>
-          <tr class="table-success">
-            <th scope="row">22</th>
-            <td>2023.06.23.</td>
-            <td>Litvánia</td>
-            <td>2-0</td>
-            <td>Hazai</td>
-            <td>Puskás Aréna</td>
-            <td>UEFA Európa-bajnoki selejtező</td>
-          </tr>
-          <tr class="table-warning">
-            <th scope="row">23</th>
-            <td>2023.06.23.</td>
-            <td>Montenegró</td>
-            <td>0-0</td>
-            <td>Vendég</td>
-            <td>Stadion pod Goricom</td>
-            <td>UEFA Európa-bajnoki selejtező</td>
-          </tr>
-          <tr class="table-success">
-            <th scope="row">24</th>
-            <td>2023.03.23.</td>
-            <td>Bulgária</td>
-            <td>3-0</td>
-            <td>Hazai</td>
-            <td>Puskás Aréna</td>
-            <td>UEFA Európa-bajnoki selejtező</td>
-          </tr>
-          <tr class="table-success">
-            <th scope="row">25</th>
-            <td>2023.03.23.</td>
-            <td>Észtország</td>
-            <td>1-0</td>
-            <td>Hazai</td>
-            <td>Puskás Aréna</td>
-            <td>Nemzetközi barátságos mérkőzés</td>
-          </tr>
-          </tbody>
-      </table>
-      <p id="magyarazat">Jelmagyarázat</p>
-      <div class="container text-center">
-        <div class="row">
-          <div class="col">
-            <p><span style="background-color: lightcoral; width: 10px; height: 10px; display: inline-block; margin-right: 5px;"></span> Vereség</p>
-          </div>
-          <div class="col">
-            <p><span style="background-color: yellow; width: 10px; height: 10px; display: inline-block; margin-right: 5px;"></span> Döntetlen</p>
-          </div>
-          <div class="col">
-            <p><span style="background-color: lightgreen; width: 10px; height: 10px; display: inline-block; margin-right: 5px;"></span> Győzelem</p>
+<div class="container mt-3">
+  <div class="card mb-3 h-100" >
+    <div class="row g-0">
+      <div class="col-md-4">
+        <img src="Pictures/Történelem/201718bajnokicim.jpg" class="img-fluid rounded-start" alt="2019 Kupa Győzelem Ünneplése" style="margin-left: 0.5em;">
+      </div>
+      <div class="col-md-8">
+        <div class="card-body">
+          <h1 class="card-title" style="   font-weight: bold;">
+            2018 - A klub harmadik bajnoki címe
+          </h1>
+          <p class="card-text" style="color: black;">
+            A 2017–18-as idény különleges helyet foglal el a klub történetében, hiszen a Videoton FC ekkor szerezte meg <strong>harmdik</strong> magyar bajnoki címét. <br>
+            A Marko Nikolić által irányított csapat végig kiélezett versenyt vívott a Ferencvárossal, és végül a 32. fordulóban aratott győzelemmel – a Budapest Honvéd elleni 2–0-s sikerrel – biztosította be az aranyérmet.<br>
+            Bár a szezonban nem volt kiemelkedő gólkirályunk, a csapat egysége, szervezettsége és küzdeni tudása hozta meg az eredményt. <br>
+            A hazai mérkőzéseket a felcsúti Pancho Arénában játszottuk, mivel ekkor zajlott a Sóstói Stadion újjáépítése – a szurkolók mégis mindenhová követték a csapatot.<br>
+            Ez a szezon nemcsak az újabb bajnoki aranyról szólt, hanem arról is, hogy Székesfehérvár ismét bebizonyította: helye van a magyar labdarúgás élvonalában.
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="container mt-3">
+    <div class="card mb-3 h-100" >
+      <div class="row g-0">
+        <div class="col-md-4">
+          <img src="Pictures/Történelem/2015bajnokicím.png" class="img-fluid rounded-start" alt="2019 Kupa Győzelem Ünneplése" style="margin-top: 4em; margin-left: 0.5em;">
+        </div>
+        <div class="col-md-8">
+          <div class="card-body">
+            <h1 class="card-title" style="   font-weight: bold;">
+              2015 - A klub második bajnoki címe
+            </h1>
+            <p class="card-text" style="color: black;">
+              A Videoton FC a 2014–15-ös szezonban megszerezte <strong>második</strong> magyar bajnoki címét, ráadásul kimagasló teljesítménnyel. <br>
+              A csapatot ebben az idényben Joan Carrillo irányította, akinek vezetésével látványos, támadófutballt játszottunk.
+              A bajnokság során a Vidi végig dominálta a mezőnyt, és már több fordulóval a vége előtt bebiztosította az aranyérmet.<br> 
+              A szezonban Nemanja Nikolić lett a csapat gólfelelőse – gólkirályként 21 találattal zárta az idényt.<br>
+              A bajnoki menetelés során 22 győzelem, 5 döntetlen és mindössze 3 vereség szerepelt a nevünk mellett. A csapat összesen 71 pontot gyűjtött, ezzel magabiztosan hódította el a címet.<br>
+              Ez az évad nemcsak az eredményekről szólt, hanem egy olyan stílusról is, amely új szintre emelte a klub játékát és a szurkolók elvárásait.
+            </p>
           </div>
         </div>
       </div>
-         
+    </div>
+
+    <div class="container mt-3">
+      <div class="card mb-3 h-100" >
+        <div class="row g-0">
+          <div class="col-md-4">
+            <img src="Pictures/Történelem/2011bajnokicím.jpg" class="img-fluid rounded-start" alt="2019 Kupa Győzelem Ünneplése" style="margin-top: 1.5em; margin-left: 0.5em;">
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h1 class="card-title" style="font-weight: bold;">
+                2011 – A klub első bajnoki címe
+              </h1>
+              <p class="card-text" style="color: black;">
+                A 2010–2011-es szezon történelmi jelentőségű volt a klub életében: a Videoton FC fennállása során először nyerte meg a magyar élvonalbeli bajnokságot (NB I). <br>
+                A csapat imponáló teljesítményt nyújtott egész idényben, és 61 ponttal végzett az élen, megelőzve az ezüstérmes Paksi FC-t.
+                A mesteri munkát Paulo Sousa végezte a kispadon, aki korszerű és támadó futballt honosított meg Székesfehérváron. <br>
+                A csapatot olyan meghatározó játékosok vitték előre, mint André Alves, Nemanja Nikolić vagy Vasiljevic, és az idény során több fontos győzelmet is arattak, különösen hazai pályán.<br>
+                A klub történetében ez a bajnoki arany mérföldkőnek számít, hiszen hosszú évek építkezése ért be ezzel a sikerrel, és egy új, eredményes korszak kezdete lett.
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+</div>
 </body>
 </html>
